# grid-services

./: .gitignore  AGENTS.md  CLEANUP_AND_TEST_ANALYSIS.md  README.md  TEST_COVERAGE_REPORT.md  dev_down.sh  dev_up.sh  docker-compose.yml  pytest.ini  redeploy_service.sh  requirements-dev.txt  requirements-testing.txt  test_evalstpm34_real.py  test_ven_quick.sh
.github/: dependabot.yml
ci/: deploy.yml  lint.yml  plan-apply.yml
docs/: COMMIT_PLAN.md  IMPLEMENTATION_SUMMARY.md  MQTT_TOPIC_ARCHITECTURE.md  TOPIC_MAPPING_FIX.md  VEN_OPERATIONS.md  VEN_TESTING_PLAN.md  backend-api.md  backend-api.yaml  cost-optimization-recommendations.md  deployment-operations.md  deployment-summary-oct-20-2025.md  development-setup.md  dr-event-flow.md  frontend-development.md  frontend-shadow-integration.md  infrastructure-architecture.md  migration-rds-timeout.md  monitoring-troubleshooting.md  mqtt-topics-architecture.md  scripts-reference.md  security-configuration.md  (+5 more)
openadr_backend/: Dockerfile  README.md  build_and_push.sh  entrypoint.sh  pyproject.toml
openadr_backend/alembic/: env.py
openadr_backend/alembic/versions/: 0001_initial.py
openadr_backend/app/: crud.py  main.py  models.py  routes.py
openadr_backend/app/core/: config.py  security.py
openadr_backend/app/db/: database.py
openadr_backend/app/models/: __init__.py  circuit.py  device.py  event.py  usage_record.py  ven.py
openadr_backend/app/routers/: auth.py  device.py  event.py  health.py  usage.py  ven.py
openadr_backend/app/schemas/: circuit.py  device.py  event.py  usage.py
openadr_backend/tests/: test_api.py
(+280 files in other folders)
